gccida/g0/ggc_mark_trees
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_mark_trees/src/ggc-common.c:1015:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+17Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_mark_trees/src/ggc-common.c:1144:29: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
first_rtl = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)&t->block.common + 16)); 
                            ^~~~~~~~~
                            tree_cons
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_mark_trees/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_mark_trees/src/ggc-common.c:1144:39: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
first_rtl = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)&t->block.common + 16)); 
                          ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ggc_mark_trees/src/obj/ggc-common.o] Error 1
